cabal-version:      3.0

name:               grades-organiser
version:            0.1.0.0
homepage:           https://github.com/Slydetx/grades-organiser
license:            BSD-3-Clause
license-file:       LICENSE
author:             Stefano Petrina
maintainer:         S.Petrina@campus.lmu.de
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  hs-source-dirs:      src
  exposed-modules:     GradesOrganiser
  build-depends:       base >=4.7 && <5,
                       deepseq,
                       directory
  default-language:    Haskell2010

executable grades-organiser
  import:             warnings
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      base >=4.7 && <5,
                      grades-organiser,
                      deepseq,
                      directory
  default-language:   Haskell2010